feat: adicionado os testes unitarios de ClienteService